--- a/blog-vue/package.json
+++ b/blog-vue/package.json
@@ -20,6 +20,7 @@
     "live2d-vue": "^0.2.5",
     "markdown-it": "^11.0.0",
     "moment": "^2.26.0",
+    "nprogress": "^0.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-vue": "^0.11.0",
     "stylus": "^0.54.7",
