--- a/blog-vue/package.json
+++ b/blog-vue/package.json
@@ -36,7 +36,7 @@
     "vue-notification": "^1.3.20",
     "vue-router": "^3.1.6",
     "vue-social-share": "0.0.3",
-    "vuetify": "^2.2.11",
+    "vuetify": "2.2.11",
     "vuex": "^3.1.3",
     "vuex-persistedstate": "^3.0.1",
     "wowjs": "^1.1.3"
