--- a/blog-common/pom.xml
+++ b/blog-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>starry-blog</artifactId>
         <groupId>com.star</groupId>
-        <version>1.0</version>
+        <version>1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -21,6 +21,11 @@
             <groupId>org.lionsoul</groupId>
             <artifactId>ip2region</artifactId>
             <version>1.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
