--- a/pom.xml
+++ b/pom.xml
@@ -10,28 +10,30 @@
 
     <groupId>com.star</groupId>
     <artifactId>starry-blog</artifactId>
-    <version>1.0</version>
+    <version>1.5</version>
     <name>Starry-Blog</name>
     <description>Starry-Blog project for Spring Boot</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
+        <version>2.4.4</version>
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <mp.version>3.4.1</mp.version>
+        <mp.version>3.4.2</mp.version>
         <swagger.version>3.0.0</swagger.version>
-        <druid.version>1.2.4</druid.version>
-        <mysql.version>8.0.22</mysql.version>
+        <druid.version>1.2.5</druid.version>
+        <mysql.version>8.0.23</mysql.version>
         <fastjson.version>1.2.75</fastjson.version>
-        <lombok.version>1.18.16</lombok.version>
+        <lombok.version>1.18.18</lombok.version>
         <validation.version>2.0.1.Final</validation.version>
-        <lang3.version>3.11</lang3.version>
+        <lang3.version>3.12.0</lang3.version>
+        <hutool.version>5.6.2</hutool.version>
+        <guava.version>30.1.1-jre</guava.version>
     </properties>
 
 
@@ -45,14 +47,16 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>30.1-jre</version>
+            <version>${guava.version}</version>
         </dependency>
+
 
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.5.1</version>
+            <version>${hutool.version}</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -130,7 +134,6 @@
             <version>${lombok.version}</version>
         </dependency>
 
-        <!-- mybatis plus -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
