--- a/blog-vue/package.json
+++ b/blog-vue/package.json
@@ -25,6 +25,7 @@
     "semantic-ui-vue": "^0.11.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "tocbot": "^4.12.2",
     "vue": "^2.6.11",
     "vue-avatar-cropper": "^1.0.6",
     "vue-axios": "^2.1.5",
