--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>blog-core</module>
         <module>blog-common</module>
+        <module>blog-search</module>
     </modules>
 
     <groupId>com.star</groupId>
@@ -38,6 +39,12 @@
 
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.4</version>
+        </dependency>
 
         <dependency>
             <groupId>net.logstash.logback</groupId>
