--- a/blog-vue/package.json
+++ b/blog-vue/package.json
@@ -45,6 +45,7 @@
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
+    "@mdi/font": "^5.9.55",
     "@vue/cli-plugin-babel": "^4.3.0",
     "@vue/cli-plugin-eslint": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
