--- a/blog-core/src/main/resources/application.yml
+++ b/blog-core/src/main/resources/application.yml
@@ -37,7 +37,7 @@ spring:
 
   #mq配置
   rabbitmq:
-    host: 192.168.43.131
+    host: localhost
     port: 5672
     username: guest
     password: guest
@@ -76,7 +76,7 @@ logging:
 swagger:
   enable: true
   application-name: Starry-Blog | 你的美好，我都记得
-  application-version: 1.5
+  application-version: 3.0
   application-description: Starry-Blog | 你的美好，我都记得
   try-host: http://localhost:${server.port}
 
