--- a/blog-core/src/main/resources/application.yml
+++ b/blog-core/src/main/resources/application.yml
@@ -80,8 +80,12 @@ swagger:
   application-description: Starry-Blog | 你的美好，我都记得
   try-host: http://localhost:${server.port}
 
+# Gitee图床配置
 ACCESS_TOKEN:
 OWNER:
 REPO_NAME:
 CREATE_REPOS_MESSAGE:
 CREATE_REPOS_URL:
+
+search:
+  mode: elasticsearch
