--- a/blog-core/src/main/resources/application.yml
+++ b/blog-core/src/main/resources/application.yml
@@ -62,6 +62,11 @@ spring:
   profiles:
     active: dev
 
+  # solr配置
+  data:
+    solr:
+      host: http://localhost:8983/solr/
+
 
 # 配置MybatisPlus
 mybatis-plus:
