--- a/blog-core/src/main/resources/application.yml
+++ b/blog-core/src/main/resources/application.yml
@@ -63,10 +63,11 @@ spring:
     active: dev
 
   # solr配置
+  solr:
+    core: starry-blog
   data:
     solr:
-      host: http://localhost:8983/solr/
-
+      host: http://localhost:8983/solr/starry-blog
 
 # 配置MybatisPlus
 mybatis-plus:
@@ -93,4 +94,4 @@ CREATE_REPOS_MESSAGE:
 CREATE_REPOS_URL:
 
 search:
-  mode: elasticsearch
+  mode: solr
