--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,23 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-solrj</artifactId>
+            <version>8.9.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-solr</artifactId>
+            <version>2.4.10</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-core</artifactId>
+            <version>8.9.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>eu.bitwalker</groupId>
