--- a/blog-core/src/main/resources/application.yml
+++ b/blog-core/src/main/resources/application.yml
@@ -69,6 +69,9 @@ spring:
     solr:
       host: http://localhost:8983/solr/starry-blog
 
+  lucene:
+    dir: ./lucene
+
 # 配置MybatisPlus
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
@@ -94,4 +97,4 @@ CREATE_REPOS_MESSAGE:
 CREATE_REPOS_URL:
 
 search:
-  mode: solr
+  mode: lucene
