--- a/pom.xml
+++ b/pom.xml
@@ -34,15 +34,44 @@
         <lang3.version>3.12.0</lang3.version>
         <hutool.version>5.6.6</hutool.version>
         <guava.version>30.1.1-jre</guava.version>
+        <lucene-solr.version>8.9.0</lucene-solr.version>
     </properties>
 
 
     <dependencies>
 
         <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>${lucene-solr.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-analyzers-common</artifactId>
+            <version>${lucene-solr.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-highlighter</artifactId>
+            <version>${lucene-solr.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-analyzers-smartcn</artifactId>
+            <version>${lucene-solr.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-solrj</artifactId>
-            <version>8.9.0</version>
+            <version>${lucene-solr.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queryparser</artifactId>
+            <version>${lucene-solr.version}</version>
         </dependency>
 
         <dependency>
@@ -54,7 +83,7 @@
         <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-core</artifactId>
-            <version>8.9.0</version>
+            <version>${lucene-solr.version}</version>
         </dependency>
 
 
