build: Starry-Blog v5.0 正式发布

--- a/blog-core/src/main/resources/application.yml
+++ b/blog-core/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
     username: root
     password: root
     druid:
+      mysql:
+        usePingMethod: false
       minimum-idle: 5
       # 空闲连接存活最大时间，默认600000（10分钟）
       idle-timeout: 180000
