--- a/blog-vue/package.json
+++ b/blog-vue/package.json
@@ -7,76 +7,60 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write"
+    ]
+  },
   "dependencies": {
     "@moefe/vue-aplayer": "^2.0.0-beta.5",
-    "animate.css": "^3.7.2",
-    "axios": "^0.19.2",
-    "clipboard": "^2.0.6",
-    "core-js": "^3.6.4",
+    "animate.css": "^4.1.1",
+    "axios": "^0.25.0",
+    "clipboard": "^2.0.8",
+    "core-js": "^3.20.3",
     "easy-typer-js": "^2.1.0",
-    "highlight.js": "^10.0.3",
+    "highlight.js": "^11.4.0",
     "jsonp": "^0.2.1",
     "live2d-vue": "^0.2.5",
-    "markdown-it": "^11.0.0",
-    "moment": "^2.26.0",
-    "mux.js": "^5.11.0",
+    "markdown-it": "^12.3.2",
+    "moment": "^2.29.1",
     "nprogress": "^0.2.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-vue": "^0.11.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "tocbot": "^4.12.2",
-    "view-design": "^4.5.0",
-    "vue": "^2.6.11",
+    "tocbot": "^4.18.0",
+    "vue": "^2.6.14",
     "vue-avatar-cropper": "^1.0.6",
-    "vue-axios": "^2.1.5",
+    "vue-axios": "^3.4.0",
     "vue-baberrage": "^3.2.4",
-    "vue-cute-timeline": "^1.2.8",
+    "vue-cute-timeline": "^1.2.10",
     "vue-highlight.js": "^3.1.0",
     "vue-image-swipe": "^1.0.5",
     "vue-infinite-loading": "^2.4.5",
     "vue-notification": "^1.3.20",
-    "vue-router": "^3.1.6",
-    "vue-social-share": "0.0.3",
-    "vue-video-player": "^5.0.2",
+    "vue-router": "^3.5.3",
+    "vue-social-share": "^0.0.3",
     "vuetify": "2.2.11",
-    "vuex": "^3.1.3",
-    "vuex-persistedstate": "^3.0.1",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
-    "@mdi/font": "^5.9.55",
-    "@vue/cli-plugin-babel": "^4.3.0",
-    "@vue/cli-plugin-eslint": "^4.3.0",
-    "@vue/cli-service": "^4.3.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "babel-eslint": "^10.1.0",
-    "compression-webpack-plugin": "^6.1.1",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^6.2.2",
-    "prettier": "^1.19.1",
+    "@mdi/font": "^6.5.95",
+    "@vue/cli-plugin-babel": "^4.5.15",
+    "@vue/cli-service": "^4.5.15",
+    "compression-webpack-plugin": "6.1.1",
+    "prettier": "^2.5.1",
     "recorderx": "^2.0.2",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
+    "sass": "~1.26.5",
+    "sass-loader": "^8.0.2",
     "vue-cli-plugin-vuetify": "^2.0.5",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.3.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended",
-      "@vue/prettier"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
   },
   "browserslist": [
     "> 1%",
