--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,6 +142,38 @@ services:
       default:
         ipv4_address: 172.69.0.31
 
+  mongo:
+    image: mongo
+    container_name: mongo
+    ports:
+      - "27017:27017"
+    volumes:
+      - ./mongo/data:/data/db
+    command: --auth --wiredTigerCacheSizeGB 1 # 配置内存限制
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root
+    networks:
+      default:
+        ipv4_address: 172.69.0.32
+
+  # mongo 管理界面
+  mongo-express:
+    image: mongo-express
+    container_name: mongo-express
+    depends_on:
+      - mongo
+    restart: unless-stopped
+    ports:
+      - "8081:8081"
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=root
+      - ME_CONFIG_MONGODB_SERVER=mongo
+    networks:
+      default:
+        ipv4_address: 172.69.0.33
+
 networks:
   default:
     name: blog
