--- a/blog-rpc/pom.xml
+++ b/blog-rpc/pom.xml
@@ -19,13 +19,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-quartz</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.star.admin</groupId>
-            <artifactId>blog-admin</artifactId>
-            <version>7.0</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>${pool2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.thrift</groupId>
